# pngoptim

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  compat_regression.yml  config.yml  perf_regression.yml
.github/workflows/: ci-trend-dashboard.yml  ci.yml  nightly-regression.yml  phase-a-governance.yml  phase-f-cross-platform.yml  release.yml
config/compliance/: deny.toml  dependency_registry_v1.toml
config/evaluation/: parameter_matrix_v1.toml
dataset/: README.md
dataset/apng/: manifest.json
dataset/functional/: manifest.json
dataset/perf/: manifest.json
dataset/quality/: manifest.json
dataset/robustness/: manifest.json
doc/: ROADMAP.md
docs/: ACCEPTANCE_MATRIX.md  BACKGROUND_AWARE_DITHERING_SPEC.md  EVALUATION_SPEC.md  PHASE_TASKLIST.md  RECONSTRUCTION_MASTER_PLAN.md
docs/phase-a/: BASELINE_REPORT_CONTRACT_V1.md  COMPLIANCE_POLICY_V1.md  DOC_CHANGE_PROCESS_V1.md  PHASE_A_PROGRESS.md
docs/phase-b/: MVP_PIPELINE_V1.md  PHASE_B_PROGRESS.md
docs/phase-c/: COMPATIBILITY_REPORT_V1.md  PHASE_C_PROGRESS.md
docs/phase-d/: ALGORITHM_REPLICATION_ANALYSIS_V1.md  PHASE_D_PROGRESS.md  QUALITY_SIZE_REPORT_V1.md  REFERENCE_DIFF_ANALYSIS_V2.md
docs/phase-e/: PERF_REPORT_V1.md  PHASE_E_PROGRESS.md
docs/phase-f/: CROSS_PLATFORM_REPORT_V1.md  PHASE_F_PROGRESS.md  RC_CANDIDATE_V1.md  STABILITY_REPORT_V1.md
docs/phase-g/: BENCHMARK_REPRO_V1.md  CI_TREND_DASHBOARD_V1.md  PHASE_G_PROGRESS.md  PUBLIC_RELEASE_V1.md  USER_GUIDE_V1.md
docs/phase-h/: APNG_OPTIMIZATION_PLAN_V1.md  PHASE_H_PROGRESS.md
docs/usage/: apng.md  getting-started.md  library-api.md  options-reference.md
ffi/: Cargo.toml
ffi/src/: lib.rs
scripts/: build-xcframework.sh
scripts/baseline/: run_baseline_v1.py  run_pngquant_baseline.sh
scripts/compat/: run_phase_c_compat.py
scripts/compliance/: run_compliance_checks.sh
scripts/cross_platform/: run_phase_f_cross_platform.py
scripts/perf/: run_phase_e_perf.py
src/: apng.rs  cli.rs  error.rs  lib.rs  main.rs  palette_quant.rs  pipeline.rs  quality.rs  quant.rs
(+6 files in other folders)
