[package]
name = "pngoptim"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
image = { version = "0.25.9", default-features = false, features = ["png"] }
png = "0.18.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
csv = "1.4.0"
sha2 = "0.10.9"
