[package]
name = "pngoptim"
version = "0.4.1"
edition = "2024"
license = "MIT"

[lib]
name = "pngoptim"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
image = { version = "0.25.9", default-features = false, features = ["png"] }
png = "0.18.1"
lcms2 = "6.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
csv = "1.4.0"
sha2 = "0.10.9"
rayon = "1.11.0"
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }
zlib-rs = "0.6.3"
crc32fast = "1"
